# ofLiveApp

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  LICENSE  README.md  cmake_ninja.sh
cmake_modules/: FindGStreamer.cmake
src/: main.cpp  ofApp.cpp  ofApp.h  ofLive.cpp  ofLive.h  ofLiveApp.cpp  ofLiveApp.h  ofLiveMain.h
